re PR c++/48935 ([C++0x] Name lookup error at enum class)

PR c++/48935
	* parser.c (cp_parser_constructor_declarator_p): Don't check
	constructor_name_p for enums.
	(cp_parser_diagnose_invalid_type_name): Correct error message.

From-SVN: r174210